Improve documentation a little

--- a/public/templates/analog-graph.html
+++ b/public/templates/analog-graph.html
@@ -33,6 +33,7 @@
                 above 3.3 V. It will burn out around 3.6 V.</p>
         </div>
     </div>
+    {% include "include/doc-tab.html" %}
     <script type="text/javascript">
 
         var chartOptions = {
