Move Rascal API routes to api.py, add Python file creation

--- a/editor/templates/editor-cm.html
+++ b/editor/templates/editor-cm.html
@@ -141,6 +141,10 @@
                             Documentation
                         </label>
                         <label class="radio">
+                            <input type="radio" name="docType" value="python" />
+                            Python
+                        </label>
+                        <label class="radio">
                             <input type="radio" name="docType" value="other" />
                             Other
                         </label>
