--- a/editor/templates/editor-a.html
+++ b/editor/templates/editor-a.html
@@ -120,6 +120,10 @@
                             Documentation
                         </label>
                         <label class="radio">
+                            <input type="radio" name="docType" value="python" />
+                            Python
+                        </label>
+                        <label class="radio">
                             <input type="radio" name="docType" value="other" />
                             Other
                         </label>
